[package]
name = "rvn_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2"
bs58 = {version = "0.4", features=["check"]}
anyhow = "1.0"
byteorder = "1.4"
serde = {version = "1.0", features=["derive"]}
hex = "0.4"
sha2 = "0.10"
sha3 = { version = "0.10", default-features = false }
bitcoin = "0.29"
bytes = "1.2"

[dev-dependencies]
serde_json = "1.0"
